--- a/package.json
+++ b/package.json
@@ -1,14 +1,11 @@
 {
-  "name": "webpack-starter-kit",
-  "version": "2.0.0",
-  "description": "Webpack starter kit",
-  "main": "index.js",
+  "name": "name-project",
   "scripts": {
-    "start": "cross-env NODE_ENV=development webpack serve --config config/webpack.dev.js",
-    "build": "cross-env NODE_ENV=production webpack --config config/webpack.prod.js",
+    "build": "webpack",
+    "dev": "webpack serve --env develop",
     "deploy": "gh-pages -d build"
   },
-  "repository": {
+    "repository": {
     "type": "git",
     "url": "git+https://github.com/Inna-Mykytiuk/webP.git"
   },
@@ -20,28 +17,18 @@
   },
   "homepage": "https://github.com/Inna-Mykytiuk/webP#readme",
   "devDependencies": {
-    "@babel/core": "^7.14.2",
-    "@babel/preset-env": "^7.14.2",
-    "babel-loader": "^8.2.2",
-    "clean-webpack-plugin": "^4.0.0-alpha.0",
-    "copy-webpack-plugin": "^8.1.1",
-    "cross-env": "^7.0.3",
-    "css-loader": "^5.2.7",
-    "css-minimizer-webpack-plugin": "^3.0.0",
-    "handlebars": "^4.7.7",
-    "handlebars-loader": "^1.7.1",
-    "html-webpack-plugin": "^5.3.1",
-    "mini-css-extract-plugin": "^1.6.2",
-    "node-sass": "^6.0.0",
-    "postcss-loader": "^5.3.0",
-    "postcss-preset-env": "^6.7.0",
-    "sass": "^1.57.1",
-    "sass-loader": "^11.1.1",
-    "style-loader": "^2.0.0",
-    "webpack": "^5.75.0",
-    "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^3.11.2",
-    "webpack-merge": "^5.7.3",
-    "webpackbar": "^5.0.0-3"
+    "css-loader": "^6.5.1",
+    "html-loader": "^3.1.0",
+    "mini-css-extract-plugin": "^2.5.2",
+    "sass": "^1.49.0",
+    "sass-loader": "^12.4.0",
+    "style-loader": "^3.3.1",
+    "webpack": "^5.66.0",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.7.3"
+  },
+  "dependencies": {
+    "html-webpack-plugin": "^5.5.0",
+    "normalize.css": "^8.0.1"
   }
 }
