--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "dev": "webpack serve --env develop",
     "deploy": "gh-pages -d build"
   },
-    "repository": {
+  "repository": {
     "type": "git",
     "url": "git+https://github.com/Inna-Mykytiuk/webP.git"
   },
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/Inna-Mykytiuk/webP#readme",
   "devDependencies": {
     "css-loader": "^6.5.1",
+    "gh-pages": "^5.0.0",
     "html-loader": "^3.1.0",
     "mini-css-extract-plugin": "^2.5.2",
     "sass": "^1.49.0",
