--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "gh-pages": "^5.0.0",
     "html-loader": "^3.1.0",
     "mini-css-extract-plugin": "^2.5.2",
+    "postcss": "^8.4.21",
+    "postcss-loader": "^7.0.2",
     "sass": "^1.49.0",
     "sass-loader": "^12.4.0",
     "style-loader": "^3.3.1",
